@@ -1,4 +1,4 @@
-KAppTemplate v0.7
+KAppTemplate v0.7.1
 Kurt Granroth <granroth@kde.org>
 ----------------------------------------------------------------------
 
